env/code_53e88587eff92/stderr.txt
  File "main.py", line 4
    print a,b
          ^
SyntaxError: invalid syntax
